Refactored monad API. Added dependencies for rabbitmq and delimited continuations.