@@ -14,7 +14,76 @@
     <cx.version>2.5</cx.version>
     <cx.port>8180</cx.port>
     <cx.router>com.biosimilarity.mdp4tw.Main</cx.router>
+    <scala.prefix>2.10</scala.prefix>
+    <scala.version>2.10.2</scala.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>${project.build.sourceEncoding}</project.reporting.outputEncoding>
   </properties>
+
+  <repositories>
+    <repository>
+      <id>scala-tools.releases</id>
+      <name>Scala-Tools Dependencies Repository for Releases</name>
+      <url>http://scala-tools.org/repo-releases</url>
+    </repository>    
+    <repository>
+      <id>scala-tools.org</id>
+      <name>Scala-Tools Maven2 Repository</name>
+      <url>http://scala-tools.org/repo-snapshots</url>
+      <snapshots />
+    </repository>
+    <repository>
+      <id>scalesxml.com</id>
+      <name>Scales XML Repository</name>
+      <url>http://scala-scales.googlecode.com/svn/repo</url>
+    </repository>
+    <repository>
+      <id>repository.codehaus.org</id>
+      <name>Codehaus</name>
+      <url>http://repository.codehaus.org/com/thoughtworks</url>
+    </repository>
+    <repository>
+      <id>repository.gwt.rewraps</id>
+      <name>gwt-maven-rewraps</name>
+      <url>http://gwt-maven-rewraps.googlecode.com/hg/</url>
+    </repository>    
+    <repository>
+      <id>basex</id>
+      <name>BaseX Maven Repository</name>
+      <url>http://files.basex.org/maven</url>
+    </repository>
+    <repository>
+      <id>ibiblio</id>
+      <name>ibiblio maven2 mirror</name>
+      <url>http://mirrors.ibiblio.org/pub/mirrors/maven2</url>
+    </repository>
+    <repository>
+      <id>sonatype</id>
+      <name>sonatype repository</name>
+      <url>https://oss.sonatype.org/content/repositories/Snapshots</url>
+    </repository>
+    <repository>
+      <id>milton</id>
+      <name>milton</name>
+      <url>http://milton.io/maven/com/ettrema/milton</url>
+    </repository>
+    <repository>
+      <id>biosim</id>
+      <url>http://biosimrepomirror.googlecode.com/svn/trunk</url>
+    </repository>
+    <repository>
+      <id>xqj</id>
+      <url>http://xqj.net/maven</url>
+    </repository>
+  </repositories>
+
+  <pluginRepositories>
+    <pluginRepository>
+      <id>scala-tools.releases</id>
+      <name>Scala-Tools Plugins Repository for Releases</name>
+      <url>http://scala-tools.org/repo-releases</url>
+    </pluginRepository>
+  </pluginRepositories>
 
   <dependencies>
     <dependency>
@@ -79,6 +148,54 @@
       <artifactId>java-cup-11a-runtime</artifactId>
       <version>local</version>
     </dependency>    
+    <dependency>
+      <groupId>com.rabbitmq</groupId>
+      <artifactId>amqp-client</artifactId>
+      <version>3.5.3</version>
+    </dependency>
+    <dependency>
+      <groupId>com.thoughtworks.xstream</groupId>
+      <artifactId>xstream</artifactId>
+      <version>1.4.4</version>
+    </dependency> 
+
+    <dependency>
+      <groupId>org.scala-lang</groupId>
+      <artifactId>scala-library</artifactId>
+      <version>${scala.version}</version>
+    </dependency>
+    <dependency>
+	<groupId>org.scala-lang</groupId>
+	<artifactId>scala-actors</artifactId>
+	<version>${scala.version}</version>
+    </dependency>            
+    <dependency>
+      <groupId>org.scala-lang</groupId>
+      <artifactId>scala-compiler</artifactId>
+      <version>${scala.version}</version>
+      <!--scope>test</scope-->
+    </dependency>
+    <dependency>
+      <groupId>org.scala-lang</groupId>
+      <artifactId>jline</artifactId>
+      <!-- version>${scala.version}</version -->
+      <version>${scala.version}</version>
+      <!-- version>2.11.0-M3</version -->
+    </dependency>    
+    <dependency>
+      <groupId>org.scala-lang</groupId>
+      <artifactId>scala-reflect</artifactId>
+      <version>${scala.version}</version>
+    </dependency>            
+    <dependency>
+      <groupId>org.scala-lang.plugins</groupId>
+      <!-- artifactId>scala-continuations-library_2.11</artifactId -->
+      <!-- artifactId>scala-continuations-library_2.11</artifactId -->
+      <artifactId>continuations</artifactId>
+      <!-- version>1.0.2</version -->
+      <!-- version>1.0.1</version -->
+      <version>2.10.2</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -89,6 +206,45 @@
         <groupId>org.scala-tools</groupId>
         <artifactId>maven-scala-plugin</artifactId>
         <version>2.15.2</version>
+        <configuration>
+          <scalaVersion>${scala.version}</scalaVersion>
+          <charset>${project.build.sourceEncoding}</charset>
+          <displayCmd>true</displayCmd>
+          <jvmArgs>	    
+            <!-- jvmArg>-Xnoagent</jvmArg -->
+            <!-- jvmArg>-Djava.compiler=NONE</jvmArg -->
+            <jvmArg>-Xmx4096m</jvmArg>
+            <jvmArg>-XX:MaxPermSize=512m</jvmArg>
+            <jvmArg>-Djava.library.path=$HGDB_ROOT/native</jvmArg>
+            <jvmArg>-DpackageLinkDefs=file://${project.build.directory}/packageLinkDefs.properties</jvmArg>
+          </jvmArgs>
+          <args>	    
+            <!-- arg>-deprecation</arg -->
+            <!-- arg>-unchecked</arg -->
+            <!-- <arg>-Xprint:selectivecps</arg> -->
+            <arg>-explaintypes</arg>
+            <!-- <arg>-Xplugin:/Users/lgm/.m2/repository/org/scala-tools/sxr/sxr_2.9.0/0.2.7/sxr_2.9.0-0.2.7.jar</arg> -->
+<!-- 	    <arg>-P:sxr:base-directory:${basedir}/src</arg> -->
+	    <arg>-P:continuations:enable</arg>
+          </args>
+	  <compilerPlugins>
+      	    <compilerPlugin>	      
+      	      <groupId>org.scala-lang.plugins</groupId>
+              <artifactId>continuations</artifactId>
+              <!-- artifactId>scala-continuations-library_2.11</artifactId -->
+              <!-- artifactId>scala-continuations-plugin_2.11.0</artifactId -->
+              <!-- version>${scala.prefix}</version -->
+              <!-- version>1.0.2</version -->
+              <!-- version>1.0.1</version -->
+              <version>2.10.2</version>
+      	    </compilerPlugin>
+	    <!-- <compilerPlugin>	       -->
+<!--       	      <groupId>org.scala-tools.sxr</groupId> -->
+<!--       	      <artifactId>sxr_2.9.0</artifactId> -->
+<!--       	      <version>0.2.7</version> -->
+<!--       	    </compilerPlugin> -->
+      	  </compilerPlugins>
+        </configuration>
         <executions>
           <execution>
             <id>scala-compile</id>
